@@ -3,6 +3,7 @@ Revision history for exact
 {{$NEXT}}
         - Extensions support
         - Carp methods import
+        - TryCatch integration
         - Include support for UTF8
         - Update feature sets to include Perl 5.30
 
